# maltactf-2025-quals

./: README.md
crypto/2log/: README.md  meta.yaml
crypto/2log/attachments/: chall.sage
crypto/2log/challenge/: gen.py
crypto/2log/solution/: solve.py
crypto/grammar-nazi/: README.md  meta.yaml
crypto/grammar-nazi/solution/: solve.sage
crypto/true-random/: README.md  meta.yaml
crypto/wintertime/: README.md  meta.yaml
misc/hotdog-or-not/: README.md  meta.yaml
misc/too-loud/: README.md  build.sh  meta.yaml
misc/totally-normal-hash/: README.md  challenge.yaml  meta.yaml
pwn/login/: README.md  challenge.yaml  meta.yaml
pwn/login/challenge/: src.c  (+3 more)
pwn/secure-dwarf/: README.md  challenge.yaml  meta.yaml  sync.sh
pwn/ultimate-extensible-firmware-interface/: README.md  challenge.yaml  meta.yaml  sync.sh
pwn/write-flag-where/: README.md  challenge.yaml  meta.yaml
rev/Painting/: README.md  meta.yaml
rev/matryoshka/: README.md  meta.yaml
rev/mvms/: README.md  meta.yaml
rev/mvms/challenge/scripts/: assemble.py  generate_ld.py  pyproject.toml
rev/mvms/challenge/scripts/vm_lib/: __init__.py  cases.py  clang_workaround.py  opcodes.py  packing.py  paths.py  program.py  registers.py
rev/not-baby-crackme/: README.md  meta.yaml
rev/spirvect/: README.md  meta.yaml
sanity/check/: meta.yaml
web/AdBlocker/: README.md  meta.yaml
web/amped-up/: README.md  challenge.yaml  meta.yaml
web/enterprise-template-as-a-service/: README.md  meta.yaml
web/fancy-text-generator/: README.md  challenge.yaml  meta.yaml
web/fmc-starboard/: README.md  meta.yaml
(+189 files in other folders)
